# embedded-utilities

./: CMakeLists.txt  LICENSE-APACHE  README.md  SUBMODULE_USAGE.md  common.c  mutex_common.h
bit/: CMakeLists.txt  bit_utils.h
docs/: COMMON.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  ELOG.md  INTEGRATION_GUIDE.md  README.md  RELEASE_NOTES_V1.0.md  RING.md  RING_USAGE.md  SUBMODULE_COMMIT_NOTES.md  SUBMODULE_USAGE.md  UART_DMA_INTEGRATION_CHECKLIST.md  UART_DMA_STDOUT_INTEGRATION.md  UNIFIED_MUTEX_GUIDE.md
eLog/: CMakeLists.txt  eLog.c  eLog.h
eQueue/: eQueue.c  eQueue.h
examples/: common_example.c  eLog_example_common.c  ring_example_common.c  uart_dma_ring_elog_example.c
examples/eLog/: eLog_config_examples.h  eLog_example.c  eLog_example_rtos.c  eLog_rtos_demo.c
ring/: CMakeLists.txt  ring.c  ring.h
